# serializer version: 1
# name: TestCreate.test_create_first
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_create_first[mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': True,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_create_first[pg]
  dict({
    'active': True,
    'administrator': True,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestCreate.test_force_reset[False]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_force_reset[False][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_force_reset[False][pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestCreate.test_force_reset[True]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_force_reset[True][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': True,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_force_reset[True][pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': True,
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestCreate.test_no_force_reset[mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestCreate.test_no_force_reset[obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bill',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestCreate.test_no_force_reset[pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'handle': 'bill',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestUpdate.test_administrator[False][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': True,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_administrator[False][obj]
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_administrator[False][pg]
  dict({
    'active': True,
    'administrator': True,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'handle': 'leeashley',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestUpdate.test_administrator[True][mongo]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_administrator[True][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_administrator[True][pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'handle': 'leeashley',
    'id': 1,
    'invalidate_sessions': False,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestUpdate.test_password[db]
  dict({
    '_id': 'bf1b993c',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'invalidate_sessions': True,
    'last_password_change': datetime,
    'primary_group': None,
    'settings': dict({
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    }),
  })
# ---
# name: TestUpdate.test_password[obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'bob',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_password[pg]
  dict({
    'active': True,
    'administrator': False,
    'b2c_display_name': '',
    'b2c_family_name': '',
    'b2c_given_name': '',
    'b2c_oid': '',
    'force_reset': False,
    'handle': 'bob',
    'id': 1,
    'invalidate_sessions': True,
    'last_password_change': datetime,
    'legacy_id': 'bf1b993c',
    'primary_group_id': None,
  })
# ---
# name: TestUpdate.test_set_groups[0][groups_after]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[0][groups_before]
  list([
    GroupMinimal(id=1, legacy_id=None, name='gaffers'),
  ])
# ---
# name: TestUpdate.test_set_groups[0][groups_mapping_after]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[0][groups_mapping_before]
  list([
    {'user_id': 1, 'group_id': 1},
  ])
# ---
# name: TestUpdate.test_set_groups[0][mongo_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[0][mongo_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[0][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[0][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[1][groups_after]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[1][groups_before]
  list([
    GroupMinimal(id=1, legacy_id=None, name='gaffers'),
  ])
# ---
# name: TestUpdate.test_set_groups[1][groups_mapping_after]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[1][groups_mapping_before]
  list([
    {'user_id': 1, 'group_id': 1, 'is_primary': False},
  ])
# ---
# name: TestUpdate.test_set_groups[1][mongo_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[1][mongo_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[1][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[1][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[2][groups_after]
  list([
    GroupMinimal(id=2, legacy_id=None, name='actors'),
  ])
# ---
# name: TestUpdate.test_set_groups[2][groups_before]
  list([
    GroupMinimal(id=1, legacy_id=None, name='gaffers'),
  ])
# ---
# name: TestUpdate.test_set_groups[2][groups_mapping_after]
  list([
    {'user_id': 1, 'group_id': 2, 'is_primary': False},
  ])
# ---
# name: TestUpdate.test_set_groups[2][groups_mapping_before]
  list([
    {'user_id': 1, 'group_id': 1, 'is_primary': False},
  ])
# ---
# name: TestUpdate.test_set_groups[2][mongo_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'actors',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[2][mongo_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[2][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[2][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[3][groups_after]
  list([
    GroupMinimal(id=2, legacy_id=None, name='actors'),
    GroupMinimal(id=3, legacy_id=None, name='oceanographers'),
  ])
# ---
# name: TestUpdate.test_set_groups[3][groups_before]
  list([
    GroupMinimal(id=1, legacy_id=None, name='gaffers'),
  ])
# ---
# name: TestUpdate.test_set_groups[3][groups_mapping_after]
  list([
    {'user_id': 1, 'group_id': 2, 'is_primary': False},
    {'user_id': 1, 'group_id': 3, 'is_primary': False},
  ])
# ---
# name: TestUpdate.test_set_groups[3][groups_mapping_before]
  list([
    {'user_id': 1, 'group_id': 1, 'is_primary': False},
  ])
# ---
# name: TestUpdate.test_set_groups[3][mongo_after]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'actors',
      }),
      dict({
        'id': 3,
        'legacy_id': None,
        'name': 'oceanographers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[3][mongo_before]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'gaffers',
      }),
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[3][pg_after]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[3][pg_before]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='leeashley', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[groups_1]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[groups_2]
  list([
    GroupMinimal(id=2, legacy_id=None, name='hydrogeologists'),
  ])
# ---
# name: TestUpdate.test_set_groups[groups_3]
  list([
    GroupMinimal(id=2, legacy_id=None, name='hydrogeologists'),
    GroupMinimal(id=1, legacy_id=None, name='musicians'),
  ])
# ---
# name: TestUpdate.test_set_groups[groups_4]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[groups_mapping_1]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[groups_mapping_2]
  list([
    {'user_id': 1, 'group_id': 2},
  ])
# ---
# name: TestUpdate.test_set_groups[groups_mapping_3]
  list([
    {'user_id': 1, 'group_id': 2},
    {'user_id': 1, 'group_id': 1},
  ])
# ---
# name: TestUpdate.test_set_groups[groups_mapping_4]
  list([
  ])
# ---
# name: TestUpdate.test_set_groups[mongo_1]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'qtaylor',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[mongo_2]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'hydrogeologists',
      }),
    ]),
    'handle': 'qtaylor',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[mongo_3]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
      dict({
        'id': 2,
        'legacy_id': None,
        'name': 'hydrogeologists',
      }),
      dict({
        'id': 1,
        'legacy_id': None,
        'name': 'musicians',
      }),
    ]),
    'handle': 'qtaylor',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[mongo_4]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'qtaylor',
    'id': 'bf1b993c',
    'last_password_change': datetime,
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: TestUpdate.test_set_groups[pg_1]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='qtaylor', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[pg_2]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='qtaylor', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[pg_3]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='qtaylor', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: TestUpdate.test_set_groups[pg_4]
  <SQLUser(id='1', legacy_id='bf1b993c', active='True', administrator='False', b2c_display_name='', b2c_given_name='', b2c_family_name='', b2c_oid='', force_reset='False', handle='qtaylor', invalidate_sessions='False', last_password_change='datetime', primary_group_id='None')>
# ---
# name: test_find_or_create_b2c_user[False]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Fred',
    'b2c_family_name': 'Smith',
    'b2c_given_name': 'Fred',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': str,
    'id': 'fb085f7f',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_find_or_create_b2c_user[True]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Bilbo',
    'b2c_family_name': 'Baggins',
    'b2c_given_name': 'Bilbo',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': list([
    ]),
    'handle': str,
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_find_users[False-None]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': None,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'diamond21',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[False-missing-handle]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[False-test_user]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[None-None]
  dict({
    'found_count': 3,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': None,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'diamond21',
        'id': '7cf872dc',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.FULL: 'full'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'juliewilliams',
        'id': 'fb085f7f',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[None-missing-handle]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[None-test_user]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[True-None]
  dict({
    'found_count': 2,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.FULL: 'full'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
        ]),
        'handle': 'juliewilliams',
        'id': 'fb085f7f',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[True-missing-handle]
  dict({
    'found_count': 0,
    'items': list([
    ]),
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_find_users[True-test_user]
  dict({
    'found_count': 1,
    'items': list([
      dict({
        'active': True,
        'administrator': False,
        'administrator_role': <AdministratorRole.BASE: 'base'>,
        'b2c': None,
        'b2c_display_name': None,
        'b2c_family_name': None,
        'b2c_given_name': None,
        'b2c_oid': None,
        'force_reset': False,
        'groups': list([
          dict({
            'id': 2,
            'legacy_id': None,
            'name': 'hydrogeologists',
          }),
          dict({
            'id': 1,
            'legacy_id': None,
            'name': 'musicians',
          }),
        ]),
        'handle': 'test_user',
        'id': 'bf1b993c',
        'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
        'permissions': dict({
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        }),
        'primary_group': None,
      }),
    ]),
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  })
# ---
# name: test_set_administrator_role[None][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_set_administrator_role[base][obj]
  dict({
    'active': True,
    'administrator': False,
    'administrator_role': <AdministratorRole.BASE: 'base'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
# name: test_set_administrator_role[full][obj]
  dict({
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': list([
    ]),
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': dict({
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    }),
    'primary_group': None,
  })
# ---
